found bug causing images to distort on mobile

--- a/styles/Audio.module.scss
+++ b/styles/Audio.module.scss
@@ -14,10 +14,6 @@
         .img__holder {
             width: 90%;
             padding: .5rem;
-
-            img {
-                height: 99%;
-            }
         }
     }
     .album__info {
